components/markdown-styles.module.css
/* Start purging... */
@tailwind components;
/* Stop purging. */

.markdown {
  @apply text-lg leading-relaxed;
}

.markdown p,
.markdown ul,
.markdown ol,
.markdown blockquote {
  @apply my-6;
}

.markdown h2 {
  @apply text-3xl mt-12 mb-4 leading-snug;
}

.markdown h3 {
  @apply text-2xl mt-8 mb-4 leading-snug;
}

.markdown a {
  @apply underline font-semibold hover:text-success hover:duration-200 hover:transition-colors;
}

.markdown ul{
  @apply list-disc list-inside
}

.markdown table{
  @apply table-auto border-collapse border
}

.markdown table td, .markdown table th{
  @apply px-4 py-2 border border-gray-200
}

.markdown blockquote{
  @apply border-l-4 border-gray-200 p-4 bg-gray-50
}

